# puzzle-solver

./: Cargo.toml  README.md
puzzle-solver-web/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
puzzle-solver-web/src/: boardcomponent.rs  main.rs  navbar.rs  newboard.rs  playpage.rs  solvepage.rs  statspage.rs
puzzle-solver-web/style/: tailwind.css
star-puzzle/: Cargo.toml
star-puzzle-solver/: Cargo.toml
star-puzzle-solver/src/: main.rs  solver.rs
star-puzzle-solver/src/solver/: bfs.rs  dfs.rs  rules.rs  rulesolver.rs
star-puzzle-solver/src/solver/rules/: colorarray.rs  fillarray.rs  finishcolor.rs  fullarray.rs  linerule2star.rs  shape.rs
star-puzzle/src/: board.rs  generator.rs  lib.rs  main.rs
utilities/: Cargo.toml
utilities/src/: astar.rs
